Fix on code wrapping

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,8 +3,6 @@
 Theme Name: gDSP v1
 */
 
-
-
 /** ------------------------ Standard styles ------------------------ **/
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font-size: 100%; vertical-align: baseline; }
 sub { vertical-align: sub; font-size: smaller; }
@@ -15,6 +13,21 @@ hr { border: 0; height: 0; border-top: 1px solid #e5e5e3; margin: 30px 0; }
 hr.no-margin { margin: 0; }
 /** ------------------------ END Standard styles ------------------------ **/
 
+/** ------------------------Styles for handling library header --------------------------------- **/
+.library-table { font-size: 10px; line-height: 13px }
+.library-table th { font-weight: bold; text-transform: uppercase; padding-bottom: 10px }
+.library-table tr td { padding-bottom: 10px; padding-right:10px; } 
+.library-footnotes { font-size: 10px; font-style: italic }
+
+div#content-wrapper code, div#content-wrapper div.highlight {
+width: 900px;
+white-space: pre-wrap;
+white-space: -moz-pre-wrap;
+white-space: -pre-wrap;
+white-space: -o-pre-wrap;
+word-wrap: break-word;
+font-size:11px;
+}
 
 /** ------------------------ Navigation ------------------------ **/
 nav#main-navigation {
